multipass/k3s/03-apps/platform/whoami/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: whoami
  namespace: whoami

spec:
  replicas: 1

  selector:
    matchLabels:
      app: whoami

  template:
    metadata:
      labels:
        app: whoami

    spec:
      containers:
        - name: whoami
          image: traefik/whoami:v1.11.0

          ports:
            - containerPort: 80

          resources:
            requests:
              cpu: 10m
              memory: 16Mi
            limits:
              cpu: 50m
              memory: 32Mi
