multipass/k3s/03-apps/platform/whoami/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute

metadata:
  name: whoami
  namespace: whoami

spec:
  entryPoints:
    - web

  routes:
    - match: Host(`whoami.multipass.k3s`)
      kind: Rule

      services:
        - name: whoami
          port: 80
